--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.1.2
   firebase_auth: ^4.5.0
   firebase_core: ^2.11.0
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
+  go_router: ^7.0.1
   google_sign_in: ^6.1.0
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
