--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.1
   google_sign_in: ^6.1.0
+  intl: ^0.18.1
   shared_preferences: ^2.1.1
 
 dev_dependencies:
